<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/select_current_activity"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/txtView">

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/working"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/working"
            android:textAlignment="center"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/walking"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/walking"
            android:textAlignment="center"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/running"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/in_place_running"
            android:textAlignment="center"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/folding"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/forward_folding"
            android:textAlignment="center"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/jumping"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/jumping_jacks"
            android:textAlignment="center"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/squats"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/squats"
            android:textAlignment="center"
            android:textSize="20sp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="500dp">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/start"
            app:layout_constraintEnd_toStartOf="@+id/stop"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/stop"
            app:layout_constraintEnd_toStartOf="@id/save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/start"
            app:layout_constraintTop_toTopOf="@+id/start" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stop"
            app:layout_constraintTop_toTopOf="@+id/stop" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>